# ArcheTape

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  output.rs
arche_tape/: Cargo.toml  LICENSE-ZLIB  README.md
arche_tape/src/: archetype_iter.rs  bitset_iterator.rs  dyn_query.rs  entities.rs  entity_builder.rs  lib.rs  main.rs  main1.rs  query.rs  static_query.rs  tests.rs  world.rs
arche_tape/src/tests/: archetype_iter.rs  bitset_iterator.rs  bitsetsss.rs  dyn_query.rs  entities.rs  mod.rs  query.rs  world.rs
benches/: Cargo.toml  bench_dynamic.rs  bench_static.rs  benchmarks.rs
ellecs-macro/: Cargo.toml
ellecs-macro/src/: lib.rs
playground/: Cargo.toml
playground/src/: main.rs
src/: anymap.rs  archetype_iter.rs  array_vec.rs  bundle.rs  entities.rs  entity_builder.rs  entity_builder_old.rs  lib.rs  lifetime_anymap.rs  main.rs  query.rs  sparse_array.rs  untyped_vec.rs  world.rs
untyped_vec/: Cargo.toml  LICENSE-MIT  README.md
untyped_vec/src/: lib.rs
