[package]
name = "ellecs"
version = "0.1.0"
authors = ["Ellen Nyan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ellecs-macro = { path = "./ellecs-macro" }
cgmath = "0.17"

[dev-dependencies]
criterion = "0.3"
cgmath = "0.17"

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"
debug = true

[profile.release]
opt-level = 3
debug = true
