[package]
name = "arche-tape"
version = "0.1.0"
authors = ["Ellen Nyan"]
edition = "2018"
license = "MIT OR Apache-2.0 OR Zlib"
repository = "https://github.com/EllenNyan/ArcheTape"
homepage = "https://github.com/EllenNyan/ArcheTape"
keywords = ["gamedev", "ecs"]
categories = ["Game Development", "Data Structures"]
description = "arche-tape is an archetypal ECS"
readme = "README.md"

[dependencies]

[dev-dependencies]
criterion = "0.3"
cgmath = "0.17"

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
opt-level = 3
lto = "thin"
debug = true

[profile.release]
opt-level = 3
debug = true
